Closed
Bug 344812
Opened 15 years ago
Closed 15 years ago
string ID typo in CertViewer: fix display of KU_CRL_SIGN key usage bit
Categories
(Core Graveyard :: Security: UI, defect)
Core Graveyard
Security: UI
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: mozbgz, Assigned: KaiE)
References
Details
(Keywords: verified1.8.1.1)
Attachments
(1 file)
778 bytes,
patch
|
KaiE
:
review+
dveditz
:
approval1.8.1.1+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.4) Gecko/20060508 Firefox/1.5.0.4 Build Identifier: There's a small typo in the patch submitted with bug 259031 - the BundleString identifier for the "CRL Signer" key usage is incorrect, thereby preventing it from being displayed (it will simply be omitted, even if the cert has this keyUsage bit set): instead of if (keyUsage & KU_CRL_SIGN) { nssComponent->GetPIPNSSBundleString("CertDumpKUCRLSign", local); it should read if (keyUsage & KU_CRL_SIGN) { nssComponent->GetPIPNSSBundleString("CertDumpKUCRLSigner", local); (that's line 748 in the trunk version of nsNSSCertHelper.cpp, see http://lxr.mozilla.org/mozilla/source/security/manager/ssl/src/nsNSSCertHelper.cpp#748) Reproducible: Always Steps to Reproduce: In the CertManager, select the root certificate for https://bugzilla.mozilla.org, i.e. the "GlobalSign Root CA" builtin token, and go to the "Certificate Key Usage" extension in the "Details" tab. Actual Results: "Field Value" will only indicate "Certificate Signer" Expected Results: Should indicate both "Certificate Signer" and "CRL Signer"
As I realized in the meantime, it's actually not bug 259031 where this mistake was introduced, but bug 78012 instead... - yes, this happened in May 2001 already (and apparently nobody noticed so far). Fixing the spelling in nsNSSCertHelper.cpp is probably the better choice than fixing pipnss.properties, since the spelling in the latter one (i.e. "CertDumpKUCRLSigner") might have been referenced by other .cpp files meanwhile.
Comment 2•15 years ago
|
||
I confirm the reported bug. Kaspar, please attach a patch to correct it.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attachment #240019 -
Flags: review?(kengert)
Assignee | ||
Comment 4•15 years ago
|
||
Comment on attachment 240019 [details] [diff] [review] proposed patch (against trunk) r=kengert I'll check this obvious correctness patch into the trunk, thanks for the patch.
Attachment #240019 -
Flags: review?(kengert) → review+
Assignee | ||
Comment 5•15 years ago
|
||
Nominating for 1.8.1.1 in case it won't make 1.8.1 (there is no patch approval flag for 1.8.1.1 yet)
Flags: blocking1.8.1.1?
Assignee | ||
Updated•15 years ago
|
Summary: CertViewer: fix display of KU_CRL_SIGN key usage bit → string ID typo in CertViewer: fix display of KU_CRL_SIGN key usage bit
Assignee | ||
Comment 6•15 years ago
|
||
fixed on trunk
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Comment 7•14 years ago
|
||
Comment on attachment 240019 [details] [diff] [review] proposed patch (against trunk) approved for 1.8 branch, a=dveditz for drivers
Attachment #240019 -
Flags: approval1.8.1.1+
Updated•14 years ago
|
Flags: blocking1.8.1.1? → blocking1.8.1.1+
Assignee | ||
Updated•14 years ago
|
Keywords: fixed1.8.1.1
Comment 8•14 years ago
|
||
following description in comment 1, confirmed presence of bug in 1.5.0.8, verified fixed for 1.8.1.1 verified 1.8.1.1 Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.1.1pre) Gecko/2006113003 BonEcho/2.0.0.1pre
Keywords: fixed1.8.1.1 → verified1.8.1.1
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•