Bug 344812, string ID typo in CertViewer: fix display of KU_CRL_SIGN key usage bit r=kengert Patch provided by Kaspar Brand